Revision history for Perl module Alien::Base.

0.045 2017-08-29 04:51:05 -0400
  - Fix broken skip in t/alien_base_modulebuild_pkgconfig.t

0.044 2017-08-23 13:20:29 -0400
  - Remove unnecessary prereqs on newer versions of Alien::Base

0.043 2017-08-17 03:48:08 -0400
  - Recommend Alien::Build instead
  - Require Module::Build 0.4004 for test_requires support

0.042 2017-07-26 11:35:49 -0400
  - Production release identical to 0.041_02

0.041_02 2017-07-25 21:52:38 -0400
  - Migrate test suite over to Test2::V0
  - Remove dependency on Test::More

0.041_01 2017-07-25 20:10:58 -0400
  - Remove dependency on List::MoreUtils

0.040 2017-03-29 01:26:09 -0400
  - Split Alien::Build::ModuleBuild from Alien::Build